# katas

./: .gitignore  README.md  manhattan.py  pyproject.toml
Banking/: README.md
Banking/python/: README.md  banking.py  pyproject.toml  test.py  test_banking.py
FizzBuzz/: README.md
FizzBuzz/python/: fizzbuzz.py  test_fizzbuzz.py
ManhattanDistance/: .mutmut-cache
ManhattanDistance/python/: manhattan.py  test_manhattan.py
stringCalculator/: string_calculator.py  test_string_calculator.py
